@@ -30,10 +30,12 @@ import java.util.stream.Collectors;
 
 import static org.innovateuk.ifs.application.builder.ApplicationBuilder.newApplication;
 import static org.innovateuk.ifs.assessment.builder.AssessmentBuilder.newAssessment;
+import static org.innovateuk.ifs.application.resource.ApplicationState.submittedAndFinishedStates;
 import static org.innovateuk.ifs.base.amend.BaseBuilderAmendFunctions.id;
 import static org.innovateuk.ifs.competition.builder.CompetitionBuilder.newCompetition;
 import static org.innovateuk.ifs.interview.builder.InterviewAssignmentBuilder.newInterviewAssignment;
 import static org.innovateuk.ifs.project.builder.ProjectBuilder.newProject;
+import static org.innovateuk.ifs.util.CollectionFunctions.simpleMap;
 import static org.junit.Assert.assertEquals;
 
 @Rollback
@@ -65,13 +67,17 @@ public class ApplicationRepositoryIntegrationTest extends BaseRepositoryIntegrat
 
     @Test
     public void findByApplicationProcessActivityStateStateIn() {
-        Collection<State> states = ApplicationState.submittedStates.stream().map(ApplicationState::getBackingState).collect(Collectors.toList());
+
+        Collection<State> states = simpleMap(
+                submittedAndFinishedStates,
+                ApplicationState::getBackingState);
 
         List<ApplicationState> applicationStates = Arrays.asList(ApplicationState.values());
-        List<Application> applicationList = applicationStates.stream()
+        List<Application> applicationList = applicationStates
+                .stream()
                 .filter(state -> state != ApplicationState.IN_PANEL)
-                .map(state -> createApplicationByState(state)).collect(Collectors
-                        .toList());
+                .map(this::createApplicationByState)
+                .collect(Collectors.toList());
 
         int initial = repository.findByApplicationProcessActivityStateStateIn(states).size();
 
